# SimpleITK

./: .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  ExpandTemplate.py  SimpleITKConfig.cmake.in  azure-pipelines.yml  azure.cmake  filters.csv  out.py
.github/: CONTRIBUTING.md
.github/actions/package_python/: action.yml
.github/actions/package_python/scripts/: win_build_python.sh
.github/workflows/: Build.yml  ElastixPackage.yml  Nightly.yml  Package.yml  additional_dictionary.txt
.github/workflows/scripts/: doxygen_publish.sh
CMake/: FindR.cmake  sitkElastixFetchContent.cmake  sitkElastixGitOptions.cmake  sitkGenerateFilterSource.cmake  sitkITKFetchContent.cmake  sitkLanguageOptions.cmake  sitkTargetUseITK.cmake
Code/BasicFilters/include/: sitkImageFilter.h
Code/BasicFilters/json/: ConnectedThresholdImageFilter.json  FastMarchingBaseImageFilter.json  FrequencyBandImageFilter.json  PatchBasedDenoisingImageFilter.json  RecursiveGaussianImageFilter.json  ScalarToRGBColormapImageFilter.json
Code/BasicFilters/src/: sitkCastImageFilter.cxx  sitkExtractImageFilter.cxx  sitkFFTFactoryHelper.cxx  sitkHashImageFilter.cxx
Code/Common/include/: sitkMacro.h  sitkPixelIDValues.h
Code/ElastixTransformixWrappers/: CMakeLists.txt
Code/ElastixTransformixWrappers/include/: sitkElastixTransformixWrappers.h
Code/ElastixTransformixWrappers/src/: CMakeLists.txt  sitkInternalUtilities.h
Code/Registration/include/: sitkImageRegistrationMethod.h
ExpandTemplateGenerator/: ExpandTemplate.py  ImageFilterTemplate.jinja  out.py
SuperBuild/: External_Elastix.cmake  External_ITK.cmake  SuperBuild.cmake
Testing/CI/Azure/: azure-pipelines.yml  azure.cmake
Testing/Unit/: CMakeLists.txt  CSharpImageFilterTestTemplate.cs.in  CSharpImageFilterTestTemplate.cs.jinja  JavaImageFilterTestTemplate.java.jinja  PythonImageFilterTestTemplate.py.jinja  RImageFilterTestTemplate.R.jinja  TclImageFilterTestTemplate.tcl.jinja  sitkElastixImageFilterTests.cxx  sitkImageTests.cxx
Utilities/Distribution/manylinux/imagefiles/: cmd.sh
Utilities/JSON/: JSONTypeToEnum.py
Utilities/Maintenance/: DownloadReleaseNotes.sh
Wrapping/Java/: CMakeLists.txt  Java.i
Wrapping/Python/: CMakeLists.txt  Python.i
docs/: requirements.txt
docs/source/: building.rst  conf.py  gettingStarted.rst  index.rst
docs/source/migration_guides/: index.rst  migrationGuide3.0.rst
docs/source/release_notes/: index.rst  notes-v0.10.0.md  notes-v0.7.0.md  notes-v0.7.1.md  notes-v0.8.0.md  notes-v0.8.1.md  notes-v0.9.0.md  notes-v0.9.1.md  notes-v1.0.0.md  notes-v1.0.1.md  notes-v1.0rc1.md  notes-v1.0rc2.md  notes-v1.0rc3.md  notes-v1.1.0.md  notes-v1.1rc1.md  notes-v1.1rc2.md  notes-v1.2.0.md  notes-v1.2.2.md  notes-v1.2.3.md  notes-v1.2.4.md  notes-v1.2rc1.md  notes-v2.0.0.md  notes-v2.0.1.md  notes-v2.0.2.md  notes-v2.0rc1.md  notes-v2.0rc2.md  notes-v2.0rc3.md  notes-v2.1.0.md  notes-v2.1.1.1.md  notes-v2.1.1.md  notes-v2.1rc1.md  notes-v2.1rc2.md  notes-v2.2.0.md  notes-v2.2.1.md  notes-v2.2rc1.md  notes-v2.2rc2.md  notes-v2.2rc3.md  notes-v2.2rc4.md  notes-v2.3.0.md  notes-v2.3.1.md  (+16 more)
